# ChangeLog for net-im/kadu-xosd_notify
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  05 May 2008; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-xosd_notify-0.6.0.1.ebuild:
  Bumped.
