@@ -1,5 +1,3 @@
 DIST kadu-0.6.0.1.tar.bz2 1566609 RMD160 06709d16dd84a10c917fb12ee3dd06eb4ef18879 SHA1 727c5b25b7178f8d947497182da6817c170b7d6a SHA256 5b022f3043b112bbba6115bdf2877ff01d6b3b1342d74db5977fa92b1662d68c
-DIST kadu-0.6.0.tar.bz2 1583937 RMD160 d53830b98b6485924ad3076694b1db78121b1c2b SHA1 ff5cdd0daa9f9de795cbfe15e163b358a9ee55e2 SHA256 f0e31b5ef00c64cad75a43220842b5564b8ec1dfd0c4481f0f3ac8b88fb9e752
 EBUILD kadu-xosd_notify-0.6.0.1.ebuild 271 RMD160 caac5918a47d65f38c9a2696c4a5fd9b5a645680 SHA1 f2b768275cfd3b6c14ade5d714182412102bbcc4 SHA256 3077d79f2f73f42a5c22a3de91a75144fcb25786d8ba6af73f2a930e6ffc50a9
-EBUILD kadu-xosd_notify-0.6.0.ebuild 271 RMD160 caac5918a47d65f38c9a2696c4a5fd9b5a645680 SHA1 f2b768275cfd3b6c14ade5d714182412102bbcc4 SHA256 3077d79f2f73f42a5c22a3de91a75144fcb25786d8ba6af73f2a930e6ffc50a9
-MISC ChangeLog 220 RMD160 4620a23854e67d773e11ed972a923447cdee9211 SHA1 f50980c15bec6687bcaeaf2f60abc43fd9cbf140 SHA256 0a3dd9b96a5f0ccbf66c1cad1129d7c14bde13f2d7f3754f5a982eadb5f10626
+MISC ChangeLog 321 RMD160 da780be9c99a09fd921fb1ec33f8a707608bf3e1 SHA1 f9fe9b30a8a88504fb95857b76af5ccab4be7bc8 SHA256 af722ae7b804b563957f11544e2dec32f6e8d9eca06209450a8201a7bd9267ff
